--- a/cards.html
+++ b/cards.html
@@ -8,21 +8,21 @@
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-  <link rel="stylesheet" href="css2/styles2.css" />
-  <link rel="stylesheet" href="css2/cards2.css" />
+  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="css/cards.css" />
 </head>
 <body>
   <header>
     <nav class="navbar">
       <div class="logo">
-        <img src="assets2/img/logo.png" alt="El arte de la Medicina" />
+        <img src="assets/img/logo.png" alt="El arte de la Medicina" />
         <p></p>
       </div>
       <ul class="nav-links">
-        <li><a href="index2.html" class="btn-animated"><i class="fas fa-home"></i> Home</a></li>
-        <li><a href="cards2.html" class="btn-animated"><i class="fas fa-lightbulb"></i> Curiosidades</a></li>
-        <li><a href="gallery2.html" class="btn-animated"><i class="fas fa-image"></i> Galería</a></li>
-        <li><a href="contact2.html" class="btn-animated"><i class="fas fa-envelope"></i> Contacto</a></li>
+        <li><a href="index.html" class="btn-animated"><i class="fas fa-home"></i> Home</a></li>
+        <li><a href="cards.html" class="btn-animated"><i class="fas fa-lightbulb"></i> Curiosidades</a></li>
+        <li><a href="gallery.html" class="btn-animated"><i class="fas fa-image"></i> Galería</a></li>
+        <li><a href="contact.html" class="btn-animated"><i class="fas fa-envelope"></i> Contacto</a></li>
       </ul>
       <div class="frase-efecto">
   Donde quiera que se ame el arte de la medicina,<br>
@@ -36,42 +36,42 @@
       <h2>Curiosidades Históricas</h2>
 <div class="curiosities-container">
   <article class="curiosity-card">
-    <img src="assets2/img/cards1.jpg" alt="El primer estetoscopio" />
+    <img src="assets/img/cards1.jpg" alt="El primer estetoscopio" />
     <h3>El primer estetoscopio era un tubo de madera</h3>
     <p>En 1816, René Laennec inventó el estetoscopio porque le parecía poco apropiado apoyar su oreja directamente sobre el pecho de una paciente mujer. El primero era solo un cilindro de madera.</p>
   </article>
   <article class="curiosity-card">
-    <img src="assets2/img/cards2.jpg" alt="El cerebro no siente dolor" />
+    <img src="assets/img/cards2.jpg" alt="El cerebro no siente dolor" />
     <h3>El cerebro no siente dolor</h3>
     <p>Aunque es el órgano que procesa las sensaciones, el tejido cerebral no tiene receptores del dolor. Por eso se pueden hacer cirugías cerebrales con el paciente despierto.</p>
   </article>
   <article class="curiosity-card">
-    <img src="assets2/img/cards3.jpg" alt="El origen de las vacunas viene de la viruela bovina" />
+    <img src="assets/img/cards3.jpg" alt="El origen de las vacunas viene de la viruela bovina" />
     <h3>El origen de las vacunas viene de la viruela bovina</h3>
     <p>Edward Jenner observó que las ordeñadoras que contraían viruela vacuna (cowpox) no enfermaban de viruela humana. En 1796 inoculó el virus vacuno a un niño y así nació la primera vacuna.</p>
   </article>
   <article class="curiosity-card">
-    <img src="assets2/img/cards4.png" alt="El corazón puede seguir latiendo fuera del cuerpo" />
+    <img src="assets/img/cards4.png" alt="El corazón puede seguir latiendo fuera del cuerpo" />
     <h3>El corazón puede seguir latiendo fuera del cuerpo</h3>
     <p>Si recibe oxígeno y nutrientes adecuados, el corazón humano late de manera autónoma gracias a su propio sistema de conducción, incluso fuera del organismo.</p>
   </article>
   <article class="curiosity-card">
-    <img src="assets2/img/cards5.jpg" alt="Los recién nacidos tienen más huesos que los adultos" />
+    <img src="assets/img/cards5.jpg" alt="Los recién nacidos tienen más huesos que los adultos" />
     <h3>Los recién nacidos tienen más huesos que los adultos</h3>
     <p>Un bebé nace con unos 300 huesos, muchos de los cuales con el tiempo se fusionan, hasta quedar en los 206 huesos del adulto.</p>
   </article>
   <article class="curiosity-card">
-    <img src="assets2/img/cards6.jpg" alt="La sangre de los cangrejos herradura se usa en medicina" />
+    <img src="assets/img/cards6.jpg" alt="La sangre de los cangrejos herradura se usa en medicina" />
     <h3>La sangre de los cangrejos herradura se usa en medicina</h3>
     <p>Se utiliza para detectar endotoxinas bacterianas en fármacos y vacunas. Es tan valiosa que llega a costar más que el oro.</p>
   </article>
 </div>
-      <button class="btn-animated" onclick="window.location='index2.html'">Volver al menú principal</button>
+      <button class="btn-animated" onclick="window.location='index.html'">Volver al menú principal</button>
     </section>
   </main>
   <footer>
     <div class="footer-logo">
-      <img src="assets2/img/logo.png" alt="Logo El arte de la Medicina" />
+      <img src="assets/img/logo.png" alt="Logo El arte de la Medicina" />
     </div>
     <div class="footer-info">
       <div class="footer-section about">
