--- a/gallery.html
+++ b/gallery.html
@@ -8,21 +8,21 @@
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-  <link rel="stylesheet" href="css2/styles2.css" />
-  <link rel="stylesheet" href="css2/gallery2.css" />
+  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="css/gallery.css" />
 </head>
 <body>
   <header>
     <nav class="navbar">
       <div class="logo">
-        <img src="assets2/img/logo.png" alt="El arte de la Medicina" />
+        <img src="assets/img/logo.png" alt="El arte de la Medicina" />
         <p></p>
       </div>
       <ul class="nav-links">
-        <li><a href="index2.html" class="btn-animated"><i class="fas fa-home"></i> Home</a></li>
-        <li><a href="cards2.html" class="btn-animated"><i class="fas fa-lightbulb"></i> Curiosidades</a></li>
-        <li><a href="gallery2.html" class="btn-animated"><i class="fas fa-image"></i> Galería</a></li>
-        <li><a href="contact2.html" class="btn-animated"><i class="fas fa-envelope"></i> Contacto</a></li>
+        <li><a href="index.html" class="btn-animated"><i class="fas fa-home"></i> Home</a></li>
+        <li><a href="cards.html" class="btn-animated"><i class="fas fa-lightbulb"></i> Curiosidades</a></li>
+        <li><a href="gallery.html" class="btn-animated"><i class="fas fa-image"></i> Galería</a></li>
+        <li><a href="contact.html" class="btn-animated"><i class="fas fa-envelope"></i> Contacto</a></li>
       </ul>
       <div class="frase-efecto">
   Donde quiera que se ame el arte de la medicina,<br>
@@ -37,43 +37,43 @@
       <div class="gallery-grid">
         <div class="gallery-item">
           <div class="gallery-title">"La lección de anatomía del Dr. Nicolaes Tulp" - Rembrandt, 1632</div>
-          <img src="assets2/img/galeria1.jpg" alt="Imagen histórica 1" />
+          <img src="assets/img/galeria1.jpg" alt="Imagen histórica 1" />
         </div>
         <div class="gallery-item">
           <div class="gallery-title">"Ciencia y Caridad" - Pablo Picasso, 1897</div>
-          <img src="assets2/img/galeria2.jpg" alt="Imagen histórica 2" />
+          <img src="assets/img/galeria2.jpg" alt="Imagen histórica 2" />
         </div>
         <div class="gallery-item">
           <div class="gallery-title">"El Dr. Peán operando" - Lautrec, 1894</div>
-          <img src="assets2/img/galeria3.jpg" alt="Imagen histórica 3" />
+          <img src="assets/img/galeria3.jpg" alt="Imagen histórica 3" />
         </div>
         <div class="gallery-item">
           <div class="gallery-title">"Los apestados de Jaffa" - Eugène Delacroix, 1834</div>
-          <img src="assets2/img/galeria4.jpg" alt="Imagen histórica 4" />
+          <img src="assets/img/galeria4.jpg" alt="Imagen histórica 4" />
         </div>
         <div class="gallery-item">
           <div class="gallery-title">"El Doctor" - Norman Rockwell, 1938</div>
-          <img src="assets2/img/galeria5.jpg" alt="Imagen histórica 5" />
+          <img src="assets/img/galeria5.jpg" alt="Imagen histórica 5" />
         </div>
         <div class="gallery-item">
           <div class="gallery-title">"La lección de anatomía del Dr.Ruysch" - Jan Van Neck, 1683</div>
-          <img src="assets2/img/galeria6.jpg" alt="Imagen histórica 6" />
+          <img src="assets/img/galeria6.jpg" alt="Imagen histórica 6" />
         </div>
         <div class="gallery-item">
           <div class="gallery-title">"Principios del tratamiento con Radioterapia" - Chicotot, 1907.</div>
-          <img src="assets2/img/galeria7.jpg" alt="Imagen histórica 7" />
+          <img src="assets/img/galeria7.jpg" alt="Imagen histórica 7" />
         </div>
         <div class="gallery-item">
           <div class="gallery-title">"La sala de espera" - Makovsky, 1870</div>
-          <img src="assets2/img/galeria8.jpg" alt="Imagen histórica 8" />
+          <img src="assets/img/galeria8.jpg" alt="Imagen histórica 8" />
         </div>
       </div>
-      <button class="btn-animated" onclick="window.location='index2.html'">Volver al menú principal</button>
+      <button class="btn-animated" onclick="window.location='index.html'">Volver al menú principal</button>
     </section>
   </main>
   <footer>
     <div class="footer-logo">
-      <img src="assets2/img/logo.png" alt="Logo El arte de la Medicina" />
+      <img src="assets/img/logo.png" alt="Logo El arte de la Medicina" />
     </div>
     <div class="footer-info">
       <div class="footer-section about">
