--- a/contact.html
+++ b/contact.html
@@ -8,21 +8,21 @@
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-  <link rel="stylesheet" href="css2/styles2.css" />
-  <link rel="stylesheet" href="css2/contact2.css" />
+  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="css/contact.css" />
 </head>
 <body>
   <header>
     <nav class="navbar">
       <div class="logo">
-        <img src="assets2/img/logo.png" alt="El arte de la Medicina" />
+        <img src="assets/img/logo.png" alt="El arte de la Medicina" />
         <p></p>
       </div>
       <ul class="nav-links">
-        <li><a href="index2.html" class="btn-animated"><i class="fas fa-home"></i> Home</a></li>
-        <li><a href="cards2.html" class="btn-animated"><i class="fas fa-lightbulb"></i> Curiosidades</a></li>
-        <li><a href="gallery2.html" class="btn-animated"><i class="fas fa-image"></i> Galería</a></li>
-        <li><a href="contact2.html" class="btn-animated"><i class="fas fa-envelope"></i> Contacto</a></li>
+        <li><a href="index.html" class="btn-animated"><i class="fas fa-home"></i> Home</a></li>
+        <li><a href="cards.html" class="btn-animated"><i class="fas fa-lightbulb"></i> Curiosidades</a></li>
+        <li><a href="gallery.html" class="btn-animated"><i class="fas fa-image"></i> Galería</a></li>
+        <li><a href="contact.html" class="btn-animated"><i class="fas fa-envelope"></i> Contacto</a></li>
       </ul>
       <div class="frase-efecto">
   Donde quiera que se ame el arte de la medicina,<br>
@@ -79,7 +79,7 @@
   </main>
   <footer>
     <div class="footer-logo">
-      <img src="assets2/img/logo.png" alt="Logo El arte de la Medicina" />
+      <img src="assets/img/logo.png" alt="Logo El arte de la Medicina" />
     </div>
     <div class="footer-info">
       <div class="footer-section about">
