--- a/index.html
+++ b/index.html
@@ -7,21 +7,21 @@
   <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Roboto&display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-  <link rel="stylesheet" href="css2/styles2.css" />
-  <link rel="stylesheet" href="css2/home2.css" />
+  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="css/home.css" />
 </head>
 <body>
   <header>
     <nav class="navbar">
       <div class="logo">
-        <img src="assets2/img/logo.png" alt="El arte de la Medicina" />
+        <img src="assets/img/logo.png" alt="El arte de la Medicina" />
         <p></p>
       </div>
       <ul class="nav-links">
-        <li><a href="index2.html" class="btn-animated"><i class="fas fa-home"></i> Home</a></li>
-        <li><a href="cards2.html" class="btn-animated"><i class="fas fa-lightbulb"></i> Curiosidades</a></li>
-        <li><a href="gallery2.html" class="btn-animated"><i class="fas fa-image"></i> Galería</a></li>
-        <li><a href="contact2.html" class="btn-animated"><i class="fas fa-envelope"></i> Contacto</a></li>
+        <li><a href="index.html" class="btn-animated"><i class="fas fa-home"></i> Home</a></li>
+        <li><a href="cards.html" class="btn-animated"><i class="fas fa-lightbulb"></i> Curiosidades</a></li>
+        <li><a href="gallery.html" class="btn-animated"><i class="fas fa-image"></i> Galería</a></li>
+        <li><a href="contact.html" class="btn-animated"><i class="fas fa-envelope"></i> Contacto</a></li>
       </ul>
        <div class="frase-efecto">
         Donde quiera que se ame el arte de la medicina,<br>
@@ -31,19 +31,19 @@
     </nav>
   </header>
   <div class="hero-image-container">
-    <img src="assets2/img/principal.jpg" alt="Imagen central medicina histórica" title="Oh no, interrumpiste la clase y ahora todos te están mirando" />
+    <img src="assets/img/principal.jpg" alt="Imagen central medicina histórica" title="Oh no, interrumpiste la clase y ahora todos te están mirando" />
   </div>
   </div>
   <main>
     <section id="home" class="section home-section">
       <h2>Bienvenido a las Curiosidades Históricas de la Medicina</h2>
       <p>Descubre datos fascinantes y poco conocidos sobre la evolución de la medicina a lo largo de la historia.</p>
-      <button class="btn-animated" onclick="window.location='cards2.html'">Explorar</button>
+      <button class="btn-animated" onclick="window.location='cards.html'">Explorar</button>
     </section>
   </main>
   <footer>
     <div class="footer-logo">
-      <img src="assets2/img/logo.png" alt="Logo El arte de la Medicina" />
+      <img src="assets/img/logo.png" alt="Logo El arte de la Medicina" />
     </div>
     <div class="footer-info">
       <div class="footer-section about">
